--- a/server-api/package.json
+++ b/server-api/package.json
@@ -4,7 +4,7 @@
   "description": "api for backend service",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon lib/app.js --exec babel-node",
+    "start": "nodemon ./bin/www --exec babel-node",
     "build": "babel lib -d dist",
     "serve": "node dist/app.js",
     "test": "mocha --compilers js:babel-register",
@@ -14,13 +14,20 @@
   "author": "joelbarbosa",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.15.2"
+    "bluebird": "^3.5.0",
+    "body-parser": "^1.17.1",
+    "config.json": "0.0.4",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.15.2",
+    "morgan": "^1.8.1",
+    "serve-favicon": "^2.4.2"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.24.1",
+    "console4color": "0.0.3",
     "gulp": "^3.9.1",
     "jshint": "^2.9.4",
     "mocha": "^3.2.0",
