add angular and bootstrap

--- a/front-api/package.json
+++ b/front-api/package.json
@@ -9,11 +9,13 @@
   },
   "author": "joelbarbosa",
   "license": "MIT",
-  "dependencies": {       
-    "express": "^4.15.2"    
+  "dependencies": {
+    "angular": "^1.6.4",
+    "bootstrap": "^3.3.7",
+    "express": "^4.15.2"
   },
-  "devDependencies": {    
-    "gulp": "^3.9.1",    
-    "nodemon": "^1.11.0"    
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "nodemon": "^1.11.0"
   }
 }
