--- a/front-api/package.json
+++ b/front-api/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "angular-mocks": "^1.6.4",
     "angular-translate": "^2.15.1",
+    "console4color": "0.0.3",
     "gulp": "^3.9.1",
     "jasmine-core": "^2.5.2",
     "karma": "^1.6.0",
