--- a/server-api/package.json
+++ b/server-api/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.17.1",
     "config.json": "0.0.4",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.3",
     "express": "^4.15.2",
     "morgan": "^1.8.1",
     "serve-favicon": "^2.4.2"
